# GaussNewton

./: CMakeLists.txt  README.md  ceresCurceFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
requiredPackages/: libamd2_5.7.2+dfsg-1_amd64.deb  libcamd2_4.5.4-1_amd64.deb  libccolamd2_5.7.2+dfsg-1_amd64.deb  libcolamd2_4.5.4-1_amd64.deb  libcxsparse3_4.5.5-1_amd64.deb  libmetis5_5.1.0.dfsg-4_amd64.deb  libqglviewer-dev-qt5_2.6.3+dfsg2-3_amd64.deb  libqglviewer-headers_2.6.3+dfsg2-3_all.deb  libqglviewer2-qt5_2.6.3+dfsg2-3_amd64.deb  libqt5concurrent5_5.7.1+dfsg-3+deb9u2_amd64.deb  libqt5core5a_5.6.1+dfsg-3ubuntu6_4_amd64.deb  libqt5dbus5_5.7.1+dfsg-3+deb9u2_amd64.deb  libqt5gui5_5.7.1+dfsg-3+deb9u2_amd64.deb  libqt5network5_5.7.1+dfsg-3+deb9u2_amd64.deb  libqt5printsupport5_5.7.1+dfsg-3+deb9u2_amd64.deb  libqt5qml5_5.7.1-2+b2_amd64.deb  libqt5quick5_5.7.1-2+b2_amd64.deb  libqt5quicktest5_5.7.1-2+b2_amd64.deb  libqt5quickwidgets5_5.7.1-2+b2_amd64.deb  libqt5sql5_5.7.1+dfsg-3+deb9u2_amd64.deb  libqt5test5_5.7.1+dfsg-3+deb9u2_amd64.deb  libqt5widgets5_5.7.1+dfsg-3+deb9u2_amd64.deb  libqt5xml5_5.7.1+dfsg-3+deb9u2_amd64.deb  libsuitesparseconfig4_4.5.4-1_amd64.deb  libsuitesparseconfig5_5.7.2+dfsg-1_amd64.deb  libxcb-xinerama0_1.12-1_amd64.deb  qt5-qmake_5.7.1+dfsg-3+deb9u2_amd64.deb  qt5-qmltooling-plugins_5.7.1-2+b2_amd64.deb  qtbase5-dev_5.7.1+dfsg-3+deb9u2_amd64.deb  qtdeclarative5-dev_5.7.1-2+b2_amd64.deb
